# pynlp-lib

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
pynlpl/local/: audio.py  text.py
pynlpl/local/text/: nltk.py  spacy.py  stanza.py  stanza_api.py  stanza_text.py  text_stanza.py
pynlpl/web/: audio.py  text.py
tests/: audio_test.py  spacy_test.py  stanza_test.py  text_test.py
